argocd-arm/rateio-online-arm-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: rateio-online-svc
spec:
  type: ClusterIP
  selector:
    app: rateio-online
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rateio-online-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: rateio-online-staging.192.168.0.201.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rateio-online-svc
                port:
                  number: 80
    - host: rateio-online-staging.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rateio-online-svc
                port:
                  number: 80
